update Basic _HTML_1
code update to fix the folder path implicitly

--- a/Basic_HTML_and_JavaScript_1/Basic_HTML_1.html
+++ b/Basic_HTML_and_JavaScript_1/Basic_HTML_1.html
@@ -15,7 +15,7 @@
 	<p><font color="#00FF00" face="Monaco" size="8"> This is writen in lime and Monaco font 8 </font> </p>
 	<p style="font-family:'Courier New';font-size:25px"><b>This is another paragraph in bold.</b> <i>this is italized</i> <u>this is underline</u></p>
 	<p style="font-size:25px">This is another paragraph.</p>	
-	<img src="dogs_playing.jpg" alt="dogs playing" width="500" height="600"> <br>
-	<img src="C:\Users\Student\Documents\GitHub\Proyectos-HTML-y-CSS\Images\dogs_playing.jpg" alt="dogs playing" width="500" height="600">
+	<img sr="dogs_playing.jpg" alt="dogs playing" width="500" height="600"> <br>
+	<img src="..\Images\dogs_playing.jpg" alt="dogs playing" width="500" height="600">
 </body>
 </html>
