--- a/Project_pets/index.html
+++ b/Project_pets/index.html
@@ -7,16 +7,15 @@
 	<body>
 		<header>
 			<h1>My First Heading</h1>
-
 			<p>My first paragraph</p>
 		</header>
 	<!-- NAV -->
 		<div>
 			<div>
 				<ul>
-					<a href="#home" id='link'><li>HOME </li> </a>
-					<a href="#gallery" id='link'><li>GALERY </li> </a>
-					<a href="#contact" id='link'><li>RESERVATIONS </li> </a>
+					<a href="#home"><li>HOME </li> </a>
+					<a href="#gallery"><li>GALERY </li> </a>
+					<a href="#citas"><li>APPOINTMENTS </li> </a>
 				</ul>					
 			</div>		
 		</div>
@@ -26,7 +25,7 @@
 		<div id="home">
 			<div>
 				<div>
-					<span>The Space Station. </span>
+					<span style="color:blue">The pet dog space. </span>
 				</div>					
 			</div>		
 		</div>		
@@ -114,7 +113,7 @@
 					<!--Photo container 7 -->
 					<div class="photo-container">
 						<div class="photo">
-							<img src="./images/thumb/thumbnail_7_San Bernardo.jpg" alt="My San bernardo friend">
+							<img src="./images/thumb/thumbnail_7_San_Bernardo.jpg" alt="My San bernardo friend">
 							<div class="photo-overlay">
 								<h3 class="white-head">Click to enlarge </h3>
 								<p>many pets who want a new home this day, make an appointment!</p>
@@ -152,11 +151,11 @@
 		</section>
 		<!--END GALLERY -->
 		
-		<!--RSVP -->
-		<section>
-		<div>
+		<!--CITAS -->
+		<section id="citas">
+		<div >
 			<div>
-				<h1>Appointments  </h1>
+				<h1>Appointments </h1>
 				<div>
 					<h2><span>Your friend awaits you, schedule soon.</span>
 					<br /> Make an appointment today!
