Added another paragraph.

--- a/Basic_HTML_and_CSS/BasicHTML.html
+++ b/Basic_HTML_and_CSS/BasicHTML.html
@@ -3,6 +3,7 @@
 	<header>
 		<h4>Basic HTML template</h4>
 		<p>Introduction to basic HTML syntax</p>
-		<hp>Added another paragrap.</p>
+		<p>Added another paragrap.</p>
+		<p>Added another paragrap 2.</p>
 	</header>
 </html>
