--- a/Basic_HTML_and_CSS/Basic_HTML_Template.html
+++ b/Basic_HTML_and_CSS/Basic_HTML_Template.html
@@ -3,7 +3,7 @@
 	<head>
         <meta charset="utf-8"
         <title>Basic HTML template</title>
-        <link rel="stylesheet" href="basic_style.css">
+        <link rel="stylesheet" href="./css/basic_style.css">
     </head>
     <body>
         <div>
