BASIC CSS SUBMISSION ASSIGNMENT

--- a/Basic_HTML_and_CSS/css_menu_rollover.html
+++ b/Basic_HTML_and_CSS/css_menu_rollover.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="./css/menu_rollover.css">
     </head>
     <body>
-        <h1>Basic CSS Demo </h1>
+        <h3> CSS menu rollover project </h3>
         <div class="wrap">
             <div class="menu-container">
                 <ul class="menu">
