HTML AND CSS WEBSITE SUBMISSION ASSIGNMENT

--- a/Basic_HTML_and_CSS/Basic_HTML_Template.html
+++ b/Basic_HTML_and_CSS/Basic_HTML_Template.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-        <meta charset="utf-8"
-        <title>Basic HTML template</title>
+        <meta charset="utf-8">
+        <!-- <title>Basic HTML template</title>1 -->
         <link rel="stylesheet" href="./css/basic_style.css">
     </head>
     <body>
