--- a/Basic_HTML_and_CSS/css_menu_rollover.html
+++ b/Basic_HTML_and_CSS/css_menu_rollover.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-        <meta charset="utf-8"
-        <title>CSS Drop-down Menu Demo</title>
+        <meta charset="utf-8">
+        <!--- <title>CSS Drop-down Menu Demo</title> -->
         <link rel="stylesheet" href="./css/menu_rollover.css">
     </head>
     <body>
