--- a/Basic_HTML_and_CSS/photo-package.html
+++ b/Basic_HTML_and_CSS/photo-package.html
@@ -8,7 +8,7 @@
     <body>
         <!--- PHOTO CONTAINER---> 
         <div class="photo">
-            <img src="../Images/Affenpinscher.jpg" alt="../Images/Affenpinscher.html">
+            <img src="./Images/Affenpinscher.jpg" alt="../Images/Affenpinscher.html">
             <div class="photo-overlay">
                 <h3 class="white-head">Click to Enlarge</h3>
                 <p>We have several pets for you. make an appointment today!</p>
