--- a/Project_pets/index.html
+++ b/Project_pets/index.html
@@ -1,37 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>My pet friend| Adopt</title>
 		<meta charset="utf-8">
+		<title>My pet friend | Adopt</title>
+		<link rel="stylesheet" href="./css/shared.css">
+		<link rel="stylesheet" href="./css/animations.css">
 	</head>
 	<body>
-		<header>
-			<h1>My First Heading</h1>
-			<p>My first paragraph</p>
-		</header>
-	<!-- NAV -->
-		<div>
-			<div>
-				<ul>
-					<a href="#home"><li>HOME </li> </a>
-					<a href="#gallery"><li>GALERY </li> </a>
-					<a href="#citas"><li>APPOINTMENTS </li> </a>
-				</ul>					
-			</div>		
+		<!-- NAV -->
+		<div class="wrap">
+			<div class="menu-container">
+				<ul class="menu">
+					<a href="#home"><li>HOME</li></a>
+					<a href="#gallery"><li>GALLERY</li></a>
+					<a href="#contact"><li>APPPOINTMENTS</li></a>
+					<a href="#videos"><li>VIDEOS</li></a>
+				</ul>
+			</div>
 		</div>
-		<!--END NAV -->
-		
-		<!--HOME -->
+		<!-- END NAV -->
+		<!-- HOME -->
 		<div id="home">
-			<div>
-				<div>
-					<span style="color:blue">The pet dog space. </span>
+			<div class="container">
+				<div class="text-center">
+					<span class="head-main">The Spet Space. Adopt me </span>
 				</div>					
 			</div>		
-		</div>		
-		<!--HOME -->
-		
-		<!--GALLERY -->
+		</div>	
+		<!-- END HOME -->
+
+		<!-- GALLERY -->
 		<section id="gallery">
 			<div class="container">
 			
@@ -41,7 +39,7 @@
 					<!--Photo container 1 -->
 					<div class="photo-container">
 						<div class="photo">
-							<img src="./images/thumb/thumbnail_1_chihuahua.jpg" alt="my chihuahua friend">
+							<img src="./images/thumb/thumb1_perros.jpg" alt="my dogs friends">
 							<div class="photo-overlay">
 								<h3 class="white-head">Click to enlarge </h3>
 								<p>many pets who want a new home this day, make an appointment!</p>
@@ -53,7 +51,7 @@
 					<!--Photo container 2 -->
 					<div class="photo-container">
 						<div class="photo">
-							<img src="./images/thumb/thumbnail_2_bulldogs.jpg" alt="My bulldogs friend">
+							<img src="./images/thumb/thumb2_gato.jpg" alt="My cats friends">
 							<div class="photo-overlay">
 								<h3 class="white-head">Click to enlarge </h3>
 								<p>many pets who want a new home this day, make an appointment!</p>
@@ -65,7 +63,7 @@
 					<!--Photo container 3 -->
 					<div class="photo-container">
 						<div class="photo">
-							<img src="./images/thumb/thumbnail_3_caniche.jpg" alt="My caniche friend">
+							<img src="./images/thumb/thumb3_loro.jpg" alt="My parrots friends">
 							<div class="photo-overlay">
 								<h3 class="white-head">Click to enlarge </h3>
 								<p>many pets who want a new home this day, make an appointment!</p>
@@ -77,7 +75,7 @@
 					<!--Photo container 4 -->
 					<div class="photo-container">
 						<div class="photo">
-							<img src="./images/thumb/thumbnail_4_labrador.jpg" alt="My labrador friend">
+							<img src="./images/thumb/thumb4_hamster.jpg" alt="My hamster friends">
 							<div class="photo-overlay">
 								<h3 class="white-head">Click to enlarge </h3>
 								<p>many pets who want a new home this day, make an appointment!</p>
@@ -89,7 +87,7 @@
 					<!--Photo container 5 -->
 					<div class="photo-container">
 						<div class="photo">
-							<img src="./images/thumb/thumbnail_5_boxer.jpg" alt="My boxer friend">
+							<img src="./images/thumb/thumb5_conejo.jpg" alt="My rabbits friends">
 							<div class="photo-overlay">
 								<h3 class="white-head">Click to enlarge </h3>
 								<p>many pets who want a new home this day, make an appointment!</p>
@@ -101,7 +99,7 @@
 					<!--Photo container 6 -->
 					<div class="photo-container">
 						<div class="photo">
-							<img src="./images/thumb/thumbnail_6_husky.jpg" alt="My husky friend">
+							<img src="./images/thumb/thumb6_peces.jpg" alt="My fishes friends">
 							<div class="photo-overlay">
 								<h3 class="white-head">Click to enlarge </h3>
 								<p>many pets who want a new home this day, make an appointment!</p>
@@ -113,7 +111,7 @@
 					<!--Photo container 7 -->
 					<div class="photo-container">
 						<div class="photo">
-							<img src="./images/thumb/thumbnail_7_San_Bernardo.jpg" alt="My San bernardo friend">
+							<img src="./images/thumb/thumb7_tortugas.jpg" alt="My turtles friends">
 							<div class="photo-overlay">
 								<h3 class="white-head">Click to enlarge </h3>
 								<p>many pets who want a new home this day, make an appointment!</p>
@@ -125,7 +123,7 @@
 					<!--Photo container 8 -->
 					<div class="photo-container">
 						<div class="photo">
-							<img src="./images/thumb/thumbnail_8_dogo_argentino.jpg" alt="My dogo friend">
+							<img src="./images/thumb/thumb8_serpientes.jpg" alt="My snakes friends">
 							<div class="photo-overlay">
 								<h3 class="white-head">Click to enlarge </h3>
 								<p>many pets who want a new home this day, make an appointment!</p>
@@ -137,7 +135,7 @@
 					<!--Photo container 9 -->
 					<div class="photo-container">
 						<div class="photo">
-							<img src="./images/thumb/thumbnail_9_bobtail.jpg" alt="My bobtail friend">
+							<img src="./images/thumb/thumb9_iguanas.jpg" alt="My iguanas friend">
 							<div class="photo-overlay">
 								<h3 class="white-head">Click to enlarge </h3>
 								<p>many pets who want a new home this day, make an appointment!</p>
@@ -149,21 +147,29 @@
 				</div>
 			</div>
 		</section>
-		<!--END GALLERY -->
+		<!-- END GALLERY -->
+
+		<!-- SECTION VIDEOS -->
+		<div class="videoWrapper" id="videos">
+			<iframe width="420" height="315" src="https://www.youtube.com/embed/GSlSce2-7MI"> title="My pets">
+			</iframe>
+		</div>	
+
+		<!--END VIDEOS -->
 		
-		<!--CITAS -->
-		<section id="citas">
-		<div >
-			<div>
-				<h1>Appointments </h1>
-				<div>
+		<!-- RSVP -->
+		<section id="contact">
+		<div class="container">
+			<div class="heading-padding">
+				<h1 class="heading-padding">Appointments  </h1>
+				<div class="reservation">
 					<h2><span>Your friend awaits you, schedule soon.</span>
 					<br /> Make an appointment today!
 					</h2>
-					<p>
+					<p class="rsvp-text">
 						Please provide us with your basic contact information.
 					</p>
-					<div>
+					<div class="form-rsvp">
 						<form action="" method="post">
 							<input class="rsvp" type="text" value="First name">
 							<input class="rsvp" type="text" value="Last name">
@@ -172,7 +178,7 @@
 							<div>
 								<label class="terms" >Terms and Conditions</label>
 							</div>
-							<div>
+							<div class="submit">
 								<input type="Submit" value="Submit">
 							</div>
 						</form>
@@ -181,13 +187,13 @@
 			</div>		
 		</div>		
 		</section>
-		<!--END RSVP -->
-		
-		<!--END FOOTER -->
+		<!-- END RSVP -->
+
+		<!-- FOOTER -->
 		<div>
-			www.thespacestations.space &nbsp;|&nbsp; &copy; 2016
-		</div>			
-		<!--END FOOTER -->
-		
+			www.the_pets.adopts &nbsp;|&nbsp; &copy; 2021
+		</div>	
+		<!-- END FOOTER -->
 	</body>
+
 </html>
