STEP 4 CSS SUBMISSION ASSIGNMENT

--- a/One-Page Website/one_page_website.html
+++ b/One-Page Website/one_page_website.html
@@ -1,29 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>My pet friend | Adopt</title>
 		<meta charset="utf-8">
+		<title>Centros | Ceremoniales</title>
+		<link rel="stylesheet" href="./css/one_page_website.css">
+		<link rel="stylesheet" href="./css/animations.css">
 	</head>
 	<body>
 		<header>
-			<h1>My pet friend | Adopt</h1>
-
-			<p>My first paragraph</p>
+			<h1>Centros | Ceremoniales</h1>
 		</header>
 	<!-- NAV -->
-		<nav>
-			<a href="#home" id='link'>HOME </a> |
-			<a href="#gallery" id='link'>GALERY </a> |
-			<a href="#contact" id='link'>APPOINTMENTS</a> |
-			<a href="#videos" id='link'>VIDEOS</a>
-		</nav>
+	<div class="wrap">
+		<div class="menu-container">
+			<ul class="menu">
+				<a href="#home"><li>HOME</li></a>
+				<a href="#gallery"><li>GALLERY</li></a>
+				<a href="#contact"><li>VISIT</li></a>
+				<a href="#videos"><li>VIDEOS</li></a>
+			</ul>
+		</div>
+	</div>
 		<!--END NAV -->
 		
 		<!--HOME -->
 		<div id="home">
-			<div>
-				<div>
-					<span>The Spet Space. </span>
+			<div class="container">
+				<div class="text-center">
+					<span class="head-main">Mi pueblo mazahua, visitanos </span>
 				</div>					
 			</div>		
 		</div>		
@@ -39,10 +43,10 @@
 					<!--Photo container 1 -->
 					<div class="photo-container">
 						<div class="photo">
-							<img src="./images/thumb/thumb1_perros.jpg" alt="my dogs friends">
+							<img src="./images/cultura.jpg" alt="Cultura Mazahua"  width="350" height="250">
 							<div class="photo-overlay">
 								<h3 class="white-head">Click to enlarge </h3>
-								<p>many pets who want a new home this day, make an appointment!</p>
+								<p>Conoce el pueblo mazagua y sus tradicioes, programa una visita!</p>
 							</div>	
 						</div>	
 					</div>	
@@ -51,10 +55,10 @@
 					<!--Photo container 2 -->
 					<div class="photo-container">
 						<div class="photo">
-							<img src="./images/thumb/thumb2_gato.jpg" alt="My cats friends">
+							<img src="./images/gastronomia.jpg" alt="Gsstronomia mazahua" width="350" height="250">
 							<div class="photo-overlay">
 								<h3 class="white-head">Click to enlarge </h3>
-								<p>many pets who want a new home this day, make an appointment!</p>
+								<p>mConoce la comida del pueblo mazahua, programa una visita!</p>
 							</div>	
 						</div>	
 					</div>	
@@ -63,10 +67,10 @@
 					<!--Photo container 3 -->
 					<div class="photo-container">
 						<div class="photo">
-							<img src="./images/thumb/thumb3_loro.jpg" alt="My parrots friends">
+							<img src="./images/sitios.jpg" alt="Visita lugares" width="300" height="200">
 							<div class="photo-overlay">
 								<h3 class="white-head">Click to enlarge </h3>
-								<p>many pets who want a new home this day, make an appointment!</p>
+								<p>Hay diversos sitios por conocer, visitanos!</p>
 							</div>	
 						</div>	
 					</div>	
@@ -75,10 +79,10 @@
 					<!--Photo container 4 -->
 					<div class="photo-container">
 						<div class="photo">
-							<img src="./images/thumb/thumb4_hamster.jpg" alt="My hamster friends">
+							<img src="./images/tradiciones.jpg" alt="Tradiciones Mazahuas" width="300" height="200">
 							<div class="photo-overlay">
 								<h3 class="white-head">Click to enlarge </h3>
-								<p>many pets who want a new home this day, make an appointment!</p>
+								<p>Diversas tradiciones, ven a conocer!</p>
 							</div>	
 						</div>	
 					</div>	
@@ -87,10 +91,10 @@
 					<!--Photo container 5 -->
 					<div class="photo-container">
 						<div class="photo">
-							<img src="./images/thumb/thumb5_conejo.jpg" alt="My rabbits friends">
+							<img src="./images/souvenir.jpg" alt="Conoce souvenir" width="300" height="200">
 							<div class="photo-overlay">
 								<h3 class="white-head">Click to enlarge </h3>
-								<p>many pets who want a new home this day, make an appointment!</p>
+								<p>Se ofrecen diferentes souvenir, Ven con nosotros!</p>
 							</div>	
 						</div>	
 					</div>	
@@ -99,10 +103,10 @@
 					<!--Photo container 6 -->
 					<div class="photo-container">
 						<div class="photo">
-							<img src="./images/thumb/thumb6_peces.jpg" alt="My fishes friends">
+							<img src="./images/plata.jpg" alt="Souvenir en plata" width="300" height="200">
 							<div class="photo-overlay">
 								<h3 class="white-head">Click to enlarge </h3>
-								<p>many pets who want a new home this day, make an appointment!</p>
+								<p>Souvenirs en plata, conocelos!</p>
 							</div>	
 						</div>	
 					</div>	
@@ -111,10 +115,10 @@
 					<!--Photo container 7 -->
 					<div class="photo-container">
 						<div class="photo">
-							<img src="./images/thumb/thumb7_tortugas.jpg" alt="My turtles friends">
+							<img src="./images/artesanias.jpg" alt="Sonoce su artesania" width="300" height="200">
 							<div class="photo-overlay">
 								<h3 class="white-head">Click to enlarge </h3>
-								<p>many pets who want a new home this day, make an appointment!</p>
+								<p>Diferentes artesanias, ven a cnocerlos!</p>
 							</div>	
 						</div>	
 					</div>	
@@ -123,10 +127,10 @@
 					<!--Photo container 8 -->
 					<div class="photo-container">
 						<div class="photo">
-							<img src="./images/thumb/thumb8_serpientes.jpg" alt="My snakes friends">
+							<img src="./images/historia.jpg" alt="Conoce su historia" width="300" height="200">
 							<div class="photo-overlay">
 								<h3 class="white-head">Click to enlarge </h3>
-								<p>many pets who want a new home this day, make an appointment!</p>
+								<p>Conoce su historia, visitas guiadas!</p>
 							</div>	
 						</div>	
 					</div>	
@@ -135,7 +139,7 @@
 					<!--Photo container 9 -->
 					<div class="photo-container">
 						<div class="photo">
-							<img src="./images/thumb/thumb9_iguanas.jpg" alt="My iguanas friend">
+							<img src="./images/dialecto.jpg" alt="Conoce su dialecto" width="300" height="200">
 							<div class="photo-overlay">
 								<h3 class="white-head">Click to enlarge </h3>
 								<p>many pets who want a new home this day, make an appointment!</p>
@@ -150,8 +154,8 @@
 		<!--END GALLERY -->
 		
 		<!-- SECTION VIDEOS -->
-		<div id="videos">
-			<iframe width="420" height="315" src="https://www.youtube.com/embed/GSlSce2-7MI"> title="My pets">
+		<div class="videoWrapper" id="videos">
+			<iframe width="420" height="315" src="https://www.youtube.com/embed/iKh5QCQVals"> title="Mi sitio Mazahua">
 			</iframe>
 		</div>	
 
@@ -159,36 +163,35 @@
 		
 		<!--RSVP -->
 		<section id="contact">
-		<div>
-			<div>
-				<h1>Appointments  </h1>
-				<div>
-					<h2><span>Your friend awaits you, schedule soon.</span>
-					<br /> Make an appointment today!
-					</h2>
-					<p>
-						Please provide us with your basic contact information.
-					</p>
-					<div>
-						<form action="" method="post">
-							<input class="rsvp" type="text" value="First name">
-							<input class="rsvp" type="text" value="Last name">
-							<input class="rsvp" type="text" value="Email address">
-							<input class="rsvp" type="text" value="Phone Number">
-							<div>
-								<label class="terms" >Terms and Conditions</label>
-							</div>
-							<div>
-								<input type="Submit" value="Submit">
-							</div>
-						</form>
-					</div>
-				</div>					
+			<div class="container">
+				<div class="heading-padding">
+					<h1 class="heading-padding">Appointments  </h1>
+					<div class="reservation">
+						<h2><span>The Mazahua people are waiting for you,, schedule soon.</span>
+						<br /> make a reservation today!
+						</h2>
+						<p class="rsvp-text">
+							Please provide us with your basic contact information.
+						</p>
+						<div class="form-rsvp">
+							<form action="" method="post">
+								<input class="rsvp" type="text" value="First name">
+								<input class="rsvp" type="text" value="Last name">
+								<input class="rsvp" type="text" value="Email address">
+								<input class="rsvp" type="text" value="Phone Number">
+								<div>
+									<label class="terms" >Terms and Conditions</label>
+								</div>
+								<div class="submit">
+									<input type="Submit" value="Submit">
+								</div>
+							</form>
+						</div>
+					</div>					
+				</div>		
 			</div>		
-		</div>		
-		</section>
+			</section>
 		<!--END RSVP -->
-		
 
 		<!-- FOOTER -->
 		<div>
